# Plotly10

./: app.py  pyproject.toml  requirements.txt
assets/: styles.css
data/: data.json
