[tool.poetry]
name = "plotly10"
version = "0.1.0"
description = ""
authors = ["DBArkimetrix <dannybharat@arkimetrix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.0"
dash = "^2.11.1"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
pandas = "^2.0.3"
dash-bootstrap-components = "^1.4.2"
pypistats = "^1.4.0"
pyproject-toml = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
